[package]
name = "relsim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
ash = "0.32.1"
winit = "*"
num = "0.3.1"
ash-window = "0.6.0"
quote = "*"
syn = "*"
static_assertions = "1.1.0"
rand = "0.8.4"
